# sdl2_proj

./: .clang-format  .gitignore  CMakeLists.txt
include/: my_include.h  second.h  vector.h
src/: main.cpp  second.cpp  vector.cpp
